--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="../src/assets/logo3.png">
     <title>Shop App</title>
+    <link rel="icon" type="image/x-icon" href="../src/assets/logo3.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
