--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Shop App</title>
-    <link rel="icon" href="src/assets/logo3_resized.png">
+    <link rel="icon" href="https://i.ibb.co/qMvLTXQ/logo3.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
